# esp-uffs

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
.github/workflows/: upload_component.yml
include/: uffs_config.h
port/: esp_spi_nand.c  esp_spi_nand.h  esp_spi_nand_alliance.c  esp_spi_nand_common.c  esp_spi_nand_common.h  esp_spi_nand_gd.c  esp_spi_nand_micron.c  esp_spi_nand_types.h  esp_spi_nand_winbond.c  esp_spi_nand_xtx.c  esp_spi_nand_zetta.c  uffs_port.c
src/: uffs_badblock.c  uffs_device.c  uffs_fd.c  uffs_fs.c  uffs_init.c  uffs_utils.c
test_apps/host_test/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
test_apps/host_test/.cache/clangd/index/: mock_spi_master.c.73CBB2C79652C882.idx  mock_spi_master.c.EA443D0036EF4A00.idx  spi_master.h.5B889631FA989209.idx  spi_master.h.5E6A7FED5892BEDB.idx  test_host_main.c.2F1BA4A642054679.idx
test_apps/host_test/components/driver/: mock_spi_master.c
test_apps/host_test/components/driver/include/driver/: spi_master.h
test_apps/host_test/components/mock_driver/: CMakeLists.txt  Kconfig  mock_spi_master.c
test_apps/host_test/components/mock_driver/include/driver/: spi_master.h
test_apps/host_test/main/: CMakeLists.txt  test_host_main.c
